--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-DB_USER=root
+
+# .env
+PORT=8000
+DB_USER=user
 DB_PASSWORD=password
-DB_NAME=meow_commerce_db
-DB_HOST=127.0.0.1
-DB_PORT=3308
+DB_NAME=go_gin_sqlx_postgres_db
+DB_HOST=localhost
+DB_PORT=5555
+
+
