--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,17 @@
-version: "3.1"
+version: "3.8"
 
 services:
   db:
-    image: mysql:latest
-    container_name: meow-commerce-db
+    image: postgres:latest
+    container_name: go_gin_sqlx_postgres_db
     environment:
-      MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: meow_commerce_db
-      MYSQL_USER: user
-      MYSQL_PASSWORD: 123456
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: go_gin_sqlx_postgres_db
     ports:
-      - "3308:3306"
+      - "5555:5432"
     volumes:
-      - db-data:/var/lib/mysql
+      - pgdata:/var/lib/postgresql/data
 
 volumes:
-  db-data:
+  pgdata:
